--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -270,5 +270,29 @@
   "confirm-delete-warning": "هل أنت متأكد أنك تريد حذف {{name}}؟",
   "failed-loading-user-permissions": "فشل في تحميل أذونات المستخدم",
   "error-saving-permissions": "خطأ في حفظ الأذونات",
-  "tester": "اختبار"
+  "tester": "اختبار",
+  "assign": "تعيين",
+  "assign-selected": "تعيين المحدد",
+  "assign-tester": "تعيين اختبار",
+  "assigned-successfully": "تم التعيين بنجاح",
+  "choose-tester": "اختر جهاز اختبار",
+  "confirm-unassign-selected": "هل أنت متأكد من أنك تريد إلغاء تعيين المعرفات المحددة من المختبرين؟",
+  "create-and-assign": "إنشاء وتعيين",
+  "create-tester": "إنشاء اختبار",
+  "enter-tester-name": "أدخل اسم المختبر",
+  "error-assigning-testers": "حدث خطأ في تعيين المختبرين",
+  "error-creating-tester": "حدث خطأ أثناء إنشاء جهاز الاختبار",
+  "error-removing-oauth-id": "حدث خطأ أثناء إزالة معرف OAuth",
+  "info": "معلومات",
+  "no-tester-found-for-id": "لم يتم العثور على مختبر لهذا المعرف",
+  "oauth-id-removed-successfully": "تمت إزالة معرف OAuth بنجاح",
+  "or-create-new-tester": "أو إنشاء اختبار جديد",
+  "select-tester": "اختر أحد المختبرين",
+  "selected-count": "تم تحديد {{count}}.",
+  "selected-unassigned": "لم يتم تعيين المعرفات المحددة",
+  "tester-created": "تم إنشاء جهاز الاختبار",
+  "tester-created-and-assigned": "تم إنشاء المُختبر وتعيينه",
+  "unassign": "إلغاء التعيين",
+  "unassign-selected": "إلغاء تحديد المحدد",
+  "user-already-assigned": "تم تعيين هذا المستخدم بالفعل للاختبار"
 }
