--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -270,5 +270,29 @@
   "confirm-delete-warning": "¿Estás seguro de que deseas eliminar a {{name}}?",
   "failed-loading-user-permissions": "Error al cargar los permisos del usuario",
   "error-saving-permissions": "Error al guardar permisos",
-  "tester": "Ensayador"
+  "tester": "Ensayador",
+  "assign": "Asignar",
+  "assign-selected": "Asignar seleccionado",
+  "assign-tester": "Asignar probador",
+  "assigned-successfully": "Asignado exitosamente",
+  "choose-tester": "Elige un probador",
+  "confirm-unassign-selected": "¿Está seguro de que desea desasignar los ID seleccionados de sus evaluadores?",
+  "create-and-assign": "Crear y asignar",
+  "create-tester": "Crear un probador",
+  "enter-tester-name": "Ingrese el nombre del probador",
+  "error-assigning-testers": "Error al asignar probadores",
+  "error-creating-tester": "Error al crear el probador",
+  "error-removing-oauth-id": "Error al eliminar el ID de OAuth",
+  "info": "Información",
+  "no-tester-found-for-id": "No se encontró ningún probador para este ID",
+  "oauth-id-removed-successfully": "El ID de OAuth se eliminó correctamente",
+  "or-create-new-tester": "o crear un nuevo probador",
+  "select-tester": "Seleccione un probador",
+  "selected-count": "{{count}} seleccionado",
+  "selected-unassigned": "Se desasignaron los ID seleccionados",
+  "tester-created": "Probador creado",
+  "tester-created-and-assigned": "Probador creado y asignado",
+  "unassign": "Desasignar",
+  "unassign-selected": "Desasignar seleccionado",
+  "user-already-assigned": "Este usuario ya está asignado a un evaluador."
 }
