--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -270,5 +270,29 @@
   "confirm-delete-warning": "Êtes-vous sûr de vouloir supprimer {{name}} ?",
   "failed-loading-user-permissions": "Échec du chargement des autorisations de l'utilisateur",
   "error-saving-permissions": "Erreur lors de l'enregistrement des permissions",
-  "tester": "Testeur"
+  "tester": "Testeur",
+  "assign": "Attribuer",
+  "assign-selected": "Attribuer la sélection",
+  "assign-tester": "Attribuer un testeur",
+  "assigned-successfully": "Attribué avec succès",
+  "choose-tester": "Choisissez un testeur",
+  "confirm-unassign-selected": "Êtes-vous sûr de vouloir annuler l'attribution des identifiants sélectionnés à leurs testeurs ?",
+  "create-and-assign": "Créer et attribuer",
+  "create-tester": "Créer un testeur",
+  "enter-tester-name": "Entrez le nom du testeur",
+  "error-assigning-testers": "Erreur lors de l'attribution des testeurs",
+  "error-creating-tester": "Erreur lors de la création du testeur",
+  "error-removing-oauth-id": "Erreur lors de la suppression de l'ID OAuth",
+  "info": "Informations",
+  "no-tester-found-for-id": "Aucun testeur trouvé pour cet ID",
+  "oauth-id-removed-successfully": "ID OAuth supprimé avec succès",
+  "or-create-new-tester": "ou créer un nouveau testeur",
+  "select-tester": "Sélectionnez un testeur",
+  "selected-count": "{{count}} sélectionnés",
+  "selected-unassigned": "Les identifiants sélectionnés n'ont pas été attribués",
+  "tester-created": "Testeur créé",
+  "tester-created-and-assigned": "Testeur créé et attribué",
+  "unassign": "Annuler l'attribution",
+  "unassign-selected": "Annuler l'attribution de la sélection",
+  "user-already-assigned": "Cet utilisateur est déjà affecté à un testeur"
 }
