--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -270,5 +270,29 @@
   "confirm-delete-warning": "האם אתה בטוח שאתה רוצה למחוק את {{name}}?",
   "failed-loading-user-permissions": "נכשל טעינת הרשאות המשתמש",
   "error-saving-permissions": "שגיאה בשמירת ההרשאות",
-  "tester": "בּוֹחֵן"
+  "tester": "בּוֹחֵן",
+  "assign": "לְהַקְצוֹת",
+  "assign-selected": "הקצה נבחרים",
+  "assign-tester": "הקצה בוחן",
+  "assigned-successfully": "הוקצה בהצלחה",
+  "choose-tester": "בחר בודק",
+  "confirm-unassign-selected": "האם אתה בטוח שברצונך לבטל את הקצאת המזהים שנבחרו מהבודקים שלהם?",
+  "create-and-assign": "צור והקצה",
+  "create-tester": "צור בודק",
+  "enter-tester-name": "הזן את שם הבוחן",
+  "error-assigning-testers": "שגיאה בהקצאת בודקים",
+  "error-creating-tester": "שגיאה ביצירת בודק",
+  "error-removing-oauth-id": "שגיאה בהסרת מזהה OAuth",
+  "info": "מידע",
+  "no-tester-found-for-id": "לא נמצא בודק עבור מזהה זה",
+  "oauth-id-removed-successfully": "מזהה OAuth הוסר בהצלחה",
+  "or-create-new-tester": "או ליצור בודק חדש",
+  "select-tester": "בחר בודק",
+  "selected-count": "נבחרו {{count}}",
+  "selected-unassigned": "בוטלו הקצאת המזהים שנבחרו",
+  "tester-created": "הבוחן נוצר",
+  "tester-created-and-assigned": "הבוחן נוצר והוקצה",
+  "unassign": "בטל הקצאה",
+  "unassign-selected": "בטל ההקצאה שנבחרה",
+  "user-already-assigned": "משתמש זה כבר הוקצה לבוחן"
 }
