--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -270,5 +270,29 @@
   "confirm-delete-warning": "您确定要删除 {{name}} 吗？",
   "failed-loading-user-permissions": "加载用户权限失败",
   "error-saving-permissions": "保存权限时出错",
-  "tester": "测试员"
+  "tester": "测试员",
+  "assign": "分配",
+  "assign-selected": "分配选定的",
+  "assign-tester": "分配测试人员",
+  "assigned-successfully": "分配成功",
+  "choose-tester": "选择测试仪",
+  "confirm-unassign-selected": "您确定要取消分配给测试人员的所选 ID 吗？",
+  "create-and-assign": "创建并分配",
+  "create-tester": "创建一个测试器",
+  "enter-tester-name": "输入测试者姓名",
+  "error-assigning-testers": "分配测试人员时出错",
+  "error-creating-tester": "创建测试器时出错",
+  "error-removing-oauth-id": "删除 OAuth ID 时出错",
+  "info": "信息",
+  "no-tester-found-for-id": "找不到该 ID 的测试人员",
+  "oauth-id-removed-successfully": "OAuth ID 已成功删除",
+  "or-create-new-tester": "或创建一个新的测试器",
+  "select-tester": "选择测试仪",
+  "selected-count": "已选择 {{count}} 个",
+  "selected-unassigned": "选定的 ID 未分配",
+  "tester-created": "测试人员已创建",
+  "tester-created-and-assigned": "创建并分配测试人员",
+  "unassign": "取消分配",
+  "unassign-selected": "取消分配所选内容",
+  "user-already-assigned": "该用户已分配给测试人员"
 }
