feat: finalize Users and Permissions

--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -271,13 +271,13 @@
   "failed-loading-user-permissions": "Échec du chargement des autorisations de l'utilisateur",
   "error-saving-permissions": "Erreur lors de l'enregistrement des permissions",
   "tester": "Testeur",
-  "assign": "Attribuer",
-  "assign-selected": "Attribuer la sélection",
-  "assign-tester": "Attribuer un testeur",
-  "assigned-successfully": "Attribué avec succès",
+  "assign": "Assigner",
+  "assign-selected": "Assigner la sélection",
+  "assign-tester": "Assigner un testeur",
+  "assigned-successfully": "Assigné avec succès",
   "choose-tester": "Choisissez un testeur",
   "confirm-unassign-selected": "Êtes-vous sûr de vouloir annuler l'assignation des identifiants sélectionnés à leurs testeurs ?",
-  "create-and-assign": "Créer et attribuer",
+  "create-and-assign": "Créer et assigner",
   "create-tester": "Créer un testeur",
   "enter-tester-name": "Entrez le nom du testeur",
   "error-assigning-testers": "Erreur lors de l'assignation des testeurs",
